--- a/docs/docs.org
+++ b/docs/docs.org
@@ -698,125 +698,6 @@ raise an error like the following:
 #+END_SRC
 
 ** file links
-*** links to local files mapped to web urls (~ONE_LINK~)
-:PROPERTIES:
-:CUSTOM_ID: /doc/links/#local-files-mapped-to-web-urls
-:END:
-
-# we've put the #+LINK: statments here to have
-# this section about links self-contained, thought
-# it is better practice to put it at the beginning
-# of the org file.
-
-#+LINK: clj ./clojure/
-
-# mapped links between local files and web urls are
-# declared with the one org keyword ONE_LINK.
-
-#+ONE_LINK: /tmp/clojurescript/ --> https://github.com/clojure/clojurescript
-#+ONE_LINK: clj:src/clj/clojure/core.clj::(defn str --> https://github.com/clojure/clojure/blob/abe19832c0294fec4c9c55430c9262c4b6d2f8b1/src/clj/clojure/core.clj#L546
-
-# to make those following links works correctly inside emacs,
-# you must have:
-# 1) ClojureScript repository cloned under the directory /tmp/clojurescript/:
-   # git clone https://github.com/clojure/clojurescript.git /tmp/clojurescript
-# 2) Clojure repository cloned under this current directory:
-#    git clone https://github.com/clojure/clojure.git
-
-- [[/tmp/clojurescript/][ClojureScript]],
-- [[clj:src/clj/clojure/core.clj::(defn str][clojure.core/str]].
-
-**** org keyword ~ONE_LINK~
-***** description
-
-In my org files, I often use links to directories which are clones of
-repositories.  If those repositories are hosted on Github for
-instance, they can be reached with web urls.
-
-With ~one~ you can declare such mappings between directories and
-web urls with the org keyword ~ONE_LINK~ respecting the following
-syntax:
-
-: #+ONE_LINK: /path/to/example/ --> https://example.com
-
-Once you've declared those mappings, ~one~, when exporting, will
-replace the links to the directories by their mapped web urls.
-
-Note that mapped links declared with org keyword ~ONE_LINK~ have
-prevalence over any other file links.
-
-***** example
-
-Assuming, you have a cloned of ClojureScript repository
-(https://github.com/clojure/clojurescript) under the directory
-~/tmp/clojurescript/~.
-
-You can declare a mapping between the repository on your machine
-(~/tmp/clojurescript/~) and the repository on Github by adding
-(anywhere) the following line to this org file:
-
-: #+ONE_LINK: /tmp/clojurescript/ --> https://github.com/clojure/clojurescript
-
-With this mapping declared, the following link:
-
-#+BEGIN_SRC text
-[[/tmp/clojurescript/][ClojureScript]]
-#+END_SRC
-
-that links on your machine to the directory ~/tmp/clojurescript/~ will
-be exported as follow:
-
-#+ATTR_ONE_RESULTS:
-#+BEGIN_SRC html
-<a href="https://github.com/clojure/clojurescript">ClojureScript</a>
-#+END_SRC
-
-and is rendered like this: [[/tmp/clojurescript/][ClojureScript]].
-
-**** org keyword ~ONE_LINK~ combined with org keyword ~LINK~
-***** description
-
-In the left part of ~#+ONE_LINK:~ statments you can use org abbreviated
-links that have been defined in ~#+LINK:~ statments.
-
-***** example
-
-For instance, in the following org snippets:
-1) we defined the abbreviated link ~clj~ that resolves to ~./clojure/~,
-2) we use it in the left part of the ~#+ONE_LINK:~ statements and,
-3) we use it in a link.
-
-#+BEGIN_SRC text
-,#+LINK: clj ./clojure/
-,#+ONE_LINK: clj:src/clj/clojure/core.clj::(defn str --> https://github.com/clojure/clojure/blob/abe19832c0294fec4c9c55430c9262c4b6d2f8b1/src/clj/clojure/core.clj#L546
-
-[[clj:src/clj/clojure/core.clj::(defn str][clojure.core/str]]
-#+END_SRC
-
-When you use the command ~org-open-at-point~ (bound to ~C-c C-o~) on the
-previous link, you "jump" (inside emacs) to the definition of the
-function ~str~ defined in the file ~./clojure/src/clj/clojure/core.clj~
-(assuming, you have a cloned of Clojure repository
-https://github.com/clojure/clojure under the directory ~./clojure/~).
-
-When you export the previous link with ~one~, you get the following
-anchor tag:
-
-#+ATTR_ONE_RESULTS:
-#+BEGIN_SRC html
-<a href="https://github.com/clojure/clojure/blob/abe19832c0294fec4c9c55430c9262c4b6d2f8b1/src/clj/clojure/core.clj#L546">clojure.core/str</a>
-#+END_SRC
-
-that points:
-
-1) to the definition of the function ~str~,
-2) on line ~546~ for the commit ~abe19832c0294fec4c9c55430c9262c4b6d2f8b1~,
-3) in the file ~src/clj/clojure/core.clj~,
-4) on Github,
-5) in the repository: ~https://github.com/clojure/clojure~,
-
-and is rendered like this: [[clj:src/clj/clojure/core.clj::(defn str][clojure.core/str]].
-
 *** links to local files in the ~public~ directory
 :PROPERTIES:
 :CUSTOM_ID: /doc/links/#local-files-in-public-dir
@@ -967,19 +848,18 @@ and is rendered like this: [[./assets/images/one.png][one image]].
 # narrow the buffer to this subsection, and export the narrowed
 # buffer with one.
 # --> This must raise an error because:
-#     1) the directory /tmp/ has no mapping to an web url
-#        declared with org keyword ONE_LINK,
-#     2) neither is a local relative file in the root
-#        directory ./public/,
-#     3) neither is a local relative file in the assets
-#        directory ./assets/.
+#
+#   1) the directory tmp is not a local relative file
+#      in the root directory ./public/,
+#   2) neither is a local relative file in the assets
+#      directory ./assets/.
+#
 # --> [[/tmp/]]
 
 Any file link that is not one of the following links:
 
-1) [[#/doc/links/#local-files-mapped-to-web-urls][link to a local file mapped to web url]],
-2) [[#/doc/links/#local-files-in-public-dir][link to a local file in the public directory]],
-3) [[#/doc/links/#local-files-in-assets-dir][link to a local file in the assets directory]],
+1) [[#/doc/links/#local-files-in-public-dir][link to a local file in the public directory]],
+2) [[#/doc/links/#local-files-in-assets-dir][link to a local file in the assets directory]],
 
 raises an ~one-link-broken~ error when ~one~ try to export it.
 
