--- a/docs/docs.org
+++ b/docs/docs.org
@@ -65,12 +65,23 @@ supported in the commentary section of the file ~one.el~
 
 Read more: [[#/why-one/][Why one?]].
 
+* headline
+:PROPERTIES:
+:ONE_PAGE: t
+:CUSTOM_ID: /doc/headline/
+:END:
+
+Note that markups and links are not exported if used in headlines, only
+the raw value string.
+
+So don't use them in headlines.
+
 * src-block
 :PROPERTIES:
 :ONE_PAGE: t
 :CUSTOM_ID: /doc/src-block/
 :END:
-** code highlighting with ~htmlize.el~
+** code highlighting with 'htmlize.el'
 *** description
 
 ~one~ highlights code via the function ~one-ox-htmlize~ that uses
@@ -228,7 +239,7 @@ Elisp code:
       )))
 #+END_SRC
 
-** org keywords ~RESULTS~ and ~ATTR_ONE_RESULTS~
+** org keywords 'RESULTS' and 'ATTR_ONE_RESULTS'
 :PROPERTIES:
 :CUSTOM_ID: /doc/src-block/#org-keywords-results-and-attr_one_results
 :END:
@@ -248,7 +259,7 @@ CSS classes:
 This way /result/ blocks can be rendered with a different style
 than /normal/ blocks as we can see in the following 2 examples.
 
-*** example using org keyword ~RESULTS~
+*** example using org keyword 'RESULTS'
 
 The following org snippet:
 
@@ -288,7 +299,7 @@ ls
 : one.el
 : README.org
 
-*** example using org keyword ~ATTR_ONE_RESULTS~
+*** example using org keyword 'ATTR_ONE_RESULTS'
 
 The following org snippet:
 
@@ -698,7 +709,7 @@ raise an error like the following:
 #+END_SRC
 
 ** file links
-*** links to local files in the ~public~ directory
+*** links to local files in the 'public' directory
 :PROPERTIES:
 :CUSTOM_ID: /doc/links/#local-files-in-public-dir
 :END:
@@ -743,7 +754,7 @@ This previous link is exported as follow:
 
 and is rendered like this: [[./public/doc/plain-list-and-item.md][page about plain-list in markdown format]].
 
-**** root directory ~public~ can be modify with org keyword ~ONE_ROOT~
+**** root directory 'public' can be modify with org keyword 'ONE_ROOT'
 
 The root directory of the website is defined in the ~:option-alist~ of
 ~one~ org export backend with the keyword ~:one-root~.
@@ -772,7 +783,7 @@ is exported as follow:
 
 and is rendered like this: [[./public/doc/plain-list-and-item.md][page about plain-list in markdown format]].
 
-*** links to local files in the ~assets~ directory
+*** links to local files in the 'assets' directory
 :PROPERTIES:
 :CUSTOM_ID: /doc/links/#local-files-in-assets-dir
 :END:
@@ -811,7 +822,7 @@ is exported as follow:
 
 and is rendered like this: [[./assets/images/one.png][one image]].
 
-**** assets directory ~assets~ can be modify with org keyword ~ONE_ASSETS~
+**** assets directory 'assets' can be modify with org keyword 'ONE_ASSETS'
 
 The directory where the assets go (~css~, ~js~, ~images~) is define in the
 ~:option-alist~ of ~one~ org export backend with the keyword
@@ -841,7 +852,7 @@ is exported as follow:
 
 and is rendered like this: [[./assets/images/one.png][one image]].
 
-*** local file links that raise an error (~one-link-broken~)
+*** local file links that raise an error ('one-link-broken')
 **** description
 
 # uncomment the last line of this comment (unresolved file link),
