--- a/docs/docs.org
+++ b/docs/docs.org
@@ -719,7 +719,7 @@ raise an error like the following:
 **** description
 
 One might want to generate at build time files that are going to be
-available in the ~public~ (root of the website by default) directory.
+available in the ~public~ (root of the website) directory.
 Those files not need to be ~one~ pages (that means not need to have
 dedicated entries in this org file).
 
@@ -754,35 +754,6 @@ This previous link is exported as follow:
 
 and is rendered like this: [[./public/doc/plain-list-and-item.md][page about plain-list in markdown format]].
 
-**** root directory 'public' can be modify with org keyword 'ONE_ROOT'
-
-The root directory of the website is defined in the ~:option-alist~ of
-~one~ org export backend with the keyword ~:one-root~.
-
-By default, it is set to ~public~, but you can change it using the org
-keyword ~ONE_ROOT~ in this org file.
-
-For instance, you can set the default root directory of the website to
-the directory ~build~ adding this line ~#+ONE_ROOT: build~ at the top of
-this org file.
-
-If you do so, the following link:
-
-#+BEGIN_SRC text
-#+ONE_ROOT: build
-# ...
-[[./build/doc/plain-list-and-item.md][page about plain-list in markdown format]]
-#+END_SRC
-
-is exported as follow:
-
-#+ATTR_ONE_RESULTS:
-#+BEGIN_SRC html
-<a href="/doc/plain-list-and-item.md">page about plain-list in markdown format</a>
-#+END_SRC
-
-and is rendered like this: [[./public/doc/plain-list-and-item.md][page about plain-list in markdown format]].
-
 *** links to local files in the 'assets' directory
 :PROPERTIES:
 :CUSTOM_ID: /doc/links/#local-files-in-assets-dir
@@ -792,9 +763,8 @@ and is rendered like this: [[./public/doc/plain-list-and-item.md][page about pla
 
 **** description
 
-Files in the directory ~assets~ (by default) are copied into the
-directory ~public~ (root of the website by default) when the website is
-built.
+Files in the directory ~assets~  are copied into the directory
+~public~ (root of the website) when the website is built.
 
 All file links pointing to files in the ~assets~ directory, once the
 website has been built, will point to files in the directory ~public~.
@@ -802,6 +772,7 @@ The links will be exported removing the ~./assets~ part of the path
 making them accessible via web url.
 
 It's convenient, because this way:
+
 1) we can "clean" the ~public~ directory whenever we need it and,
 2) local file links in this org file are never broken.
 
@@ -811,36 +782,6 @@ For instance the following link:
 
 #+BEGIN_SRC text
 [[./assets/images/one.png][one image]]
-#+END_SRC
-
-is exported as follow:
-
-#+ATTR_ONE_RESULTS:
-#+BEGIN_SRC html
-<a href="/images/one.png">one image</a>
-#+END_SRC
-
-and is rendered like this: [[./assets/images/one.png][one image]].
-
-**** assets directory 'assets' can be modify with org keyword 'ONE_ASSETS'
-
-The directory where the assets go (~css~, ~js~, ~images~) is define in the
-~:option-alist~ of ~one~ org export backend with the keyword
-~:one-assets~.
-
-By default, it is set to ~assets~, but you can change it using the org
-keyword ~ONE_ASSETS~ in this org file.
-
-For instance, you can set the assets directory to the directory
-~resources~ adding this line ~#+ONE_ASSETS: resources~ at the top of this
-org file.
-
-If you do so, the following link:
-
-#+BEGIN_SRC text
-#+ONE_ASSETS: resources
-# ...
-[[./resources/images/one.png][one image]]
 #+END_SRC
 
 is exported as follow:
