--- a/docs/docs.org
+++ b/docs/docs.org
@@ -1,6 +1,6 @@
 * Home page
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /
 :END:
 
@@ -8,7 +8,7 @@ I'm the home page.
 
 * About page
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /about/
 :END:
 
@@ -16,7 +16,7 @@ I'm the about page.
 
 * 404
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /404/
 :END:
 
@@ -24,7 +24,7 @@ I'm the 404 page.
 
 * Why one?
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /why-one/
 :END:
 
@@ -50,7 +50,7 @@ supported in the commentary section of the file ~one.el~
 * ----- Documentation -----
 * org elements not supported
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/org-elements-not-supported/
 :END:
 
@@ -67,7 +67,7 @@ Read more: [[#/why-one/][Why one?]].
 
 * headline
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/headline/
 :END:
 
@@ -78,7 +78,7 @@ So don't use them in headlines.
 
 * src-block
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/src-block/
 :END:
 ** code highlighting with 'htmlize.el'
@@ -386,7 +386,7 @@ and is rendered by ~one~ like this:
 
 * quote-block
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/quote-block/
 :END:
 
@@ -419,7 +419,7 @@ A quitter never wins and a winner never quits. —Napoleon Hill
 
 * fixed-width and example-block
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/fixed-width-and-example-block/
 :END:
 ** description
@@ -523,7 +523,7 @@ This    is
 
 * links
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/links/
 :END:
 ** http, https, mailto links
@@ -589,7 +589,7 @@ In ~one~, ~CUSTOM_ID~ properties are:
   #+BEGIN_SRC text
   ,* Page 1
   :PROPERTIES:
-  :ONE_PAGE: t
+  :ONE_IS_PAGE: t
   :CUSTOM_ID: /blog/page-1/
   :END:
   #+END_SRC
@@ -600,7 +600,7 @@ In ~one~, ~CUSTOM_ID~ properties are:
   #+BEGIN_SRC text
   ,* Page 1
   :PROPERTIES:
-  :ONE_PAGE: t
+  :ONE_IS_PAGE: t
   :CUSTOM_ID: /blog/page-1/
   :END:
   ,** headline 1 in page Page 1
@@ -834,7 +834,7 @@ we try to export the link with ~one~) an error like the following:
 
 * plain-list and item
 :PROPERTIES:
-:ONE_PAGE: t
+:ONE_IS_PAGE: t
 :CUSTOM_ID: /doc/plain-list-and-item/
 :END:
 
