--- a/docs/docs.org
+++ b/docs/docs.org
@@ -1,7 +1,6 @@
 * Home page
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-home
+:ONE: one-default-home
 :CUSTOM_ID: /
 :END:
 
@@ -9,7 +8,7 @@ I'm the home page.
 
 * About page
 :PROPERTIES:
-:ONE_IS_PAGE: t
+:ONE: one-default-home
 :CUSTOM_ID: /about/
 :END:
 
@@ -17,7 +16,7 @@ I'm the about page.
 
 * 404
 :PROPERTIES:
-:ONE_IS_PAGE: t
+:ONE: one-default-home
 :CUSTOM_ID: /404/
 :END:
 
@@ -25,7 +24,7 @@ I'm the 404 page.
 
 * Why one?
 :PROPERTIES:
-:ONE_IS_PAGE: t
+:ONE: one-default-home
 :CUSTOM_ID: /why-one/
 :END:
 
@@ -51,8 +50,7 @@ supported in the commentary section of the file ~one.el~
 * ----- Documentation -----
 * org elements not supported
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/org-elements-not-supported/
 :END:
 
@@ -69,8 +67,7 @@ Read more: [[#/why-one/][Why one?]].
 
 * headline
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/headline/
 :END:
 
@@ -81,8 +78,7 @@ So don't use them in headlines.
 
 * src-block
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/src-block/
 :END:
 ** code highlighting with 'htmlize.el'
@@ -390,8 +386,7 @@ and is rendered by ~one~ like this:
 
 * quote-block
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/quote-block/
 :END:
 
@@ -424,8 +419,7 @@ A quitter never wins and a winner never quits. —Napoleon Hill
 
 * fixed-width and example-block
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/fixed-width-and-example-block/
 :END:
 ** description
@@ -529,8 +523,7 @@ This    is
 
 * links
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/links/
 :END:
 ** http, https, mailto links
@@ -841,8 +834,7 @@ we try to export the link with ~one~) an error like the following:
 
 * plain-list and item
 :PROPERTIES:
-:ONE_IS_PAGE: t
-:ONE_RENDER_PAGE_WITH: one-default-with-toc
+:ONE: one-default-with-toc
 :CUSTOM_ID: /doc/plain-list-and-item/
 :END:
 
